--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
                     <li>Calculator</li>
                     <li>About us</li>
                     <li>Locate us</li>
-                    <li>Help</li>
+                    <li><a name="help-page" href="help.html">Help</a></li>
                     <li>Setting</li>
                 </ul>
             </div>
@@ -61,7 +61,7 @@
             <!-- main content -->
             <div data-role="content" role="main" class="main-content">
                 <p>
-                    You can get in touch with the nearest Esurance branch and our agents will be delighted to satisfy your queries.
+                    Requesting for more information? Interested with our insurance packages? You can get in touch with the nearest Esurance branch and our agents will be delighted to satisfy your queries.
                 </p>
                 <div data-role="collapsible-set" data-theme="b" data-content-theme="b">
                     <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross" data-collapsed="false">
