Added structure for pages: Calculator, About Us, Locate Us, Help, Setting

--- a/www/about.html
+++ b/www/about.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <!-- Locate Us Page -->
-<div data-role="page" data-theme="a" id="help">
+<div data-role="page" data-theme="a" id="about">
     <!-- left menu -->
     <div data-role="panel" id="panel" data-position="left" data-theme="a" data-display="push" class="navbar">
         <ul data-role="listview">
@@ -60,10 +60,10 @@
 
     <!-- main content -->
     <div data-role="content" role="main" class="main-content">
-        <p>help page</p>
+        <p>about page</p>
 
-        </div>
-    </div><!-- end main content -->
+    </div>
+</div><!-- end main content -->
 </div><!-- end page locate us -->
 </body>
 </html>
