--- a/www/index.html
+++ b/www/index.html
@@ -39,15 +39,15 @@
     </head>
     <body>
         <!-- Locate Us Page -->
-        <div data-role="page" data-theme="a" id="locate-us">
+        <div data-role="page" data-theme="a" id="homepage">
             <!-- left menu -->
-            <div data-role="panel" id="panel" data-position="left" data-theme="a" data-display="push">
+            <div data-role="panel" id="panel" data-position="left" data-theme="a" data-display="push" class="navbar">
                 <ul data-role="listview">
-                    <li>Calculator</li>
-                    <li>About us</li>
-                    <li>Locate us</li>
-                    <li><a name="help-page" href="help.html">Help</a></li>
-                    <li>Setting</li>
+                    <li><a name="calculator-page" href="calculator.html" data-icon="false">Calculator</a></li>
+                    <li><a name="about-page" href="about.html">About us</a></li>
+                    <li><a name="locate-page" href="locate.html">Locate us</a></li>
+                    <li><a name="help-page" href="help.html" data-icon="false">Help</a></li>
+                    <li><a name="Setting-page" href="setting.html"></a></li>
                 </ul>
             </div>
 
@@ -55,52 +55,13 @@
             <div data-role="header">
                 <a data-iconpos="notext" href="#panel" data-role="button" data-icon="flat-menu"></a>
                 <h1>Esurance</h1>
-                <a data-iconpos="notext" data-role="button" data-icon="gear" title="Setting">Setting</a>
+                <a href="setting.html" data-iconpos="notext" data-role="button" data-icon="gear" title="Setting">Setting</a>
             </div>
 
             <!-- main content -->
             <div data-role="content" role="main" class="main-content">
-                <p>
-                    Requesting for more information? Interested with our insurance packages? You can get in touch with the nearest Esurance branch and our agents will be delighted to satisfy your queries.
-                </p>
-                <div data-role="collapsible-set" data-theme="b" data-content-theme="b">
-                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross" data-collapsed="false">
-                        <h3>Port Louis</h3>
-                        <p>12 Barracks Street, Port Louis</p>
-                        <p>Tel: 214 5858</p>
-                        <p>Email: plouis@esurance.com</p>
-                    </div>
-                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
-                        <h3>Triolet</h3>
-                        <p>Royal Road - 8th Mile</p>
-                        <p>Tel: 214 5858</p>
-                        <p>Email: triolet@esurance.com</p>
-                    </div>
-                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
-                        <h3>Rose Hill</h3>
-                        <p>9 Sir Virgil Naz Street, Rose Hill</p>
-                        <p>Tel: 214 5858</p>
-                        <p>Email: rhill@esurance.com</p>
-                    </div>
-                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
-                        <h3>Flacq</h3>
-                        <p>Royal Road, Flacq</p>
-                        <p>Tel: 214 5858</p>
-                        <p>Email: flacq@esurance.com</p>
-                    </div>
-                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
-                        <h3>Curepipe</h3>
-                        <p>16 Leclezio Street</p>
-                        <p>Tel: 214 5858</p>
-                        <p>Email: curepipe@esurance.com</p>
-                    </div>
-                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
-                        <h3>Vacoas</h3>
-                        <p>Royal Road, Vacoas</p>
-                        <p>Tel: 214 5858</p>
-                        <p>Email: vacoas@esurance.com</p>
-                    </div>
-                </div>
+
+                <p>index</p>
             </div><!-- end main content -->
         </div><!-- end page locate us -->
     </body>
