--- a/www/locate.html
+++ b/www/locate.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <!-- Locate Us Page -->
-<div data-role="page" data-theme="a" id="help">
+<div data-role="page" data-theme="a" id="locate-us">
     <!-- left menu -->
     <div data-role="panel" id="panel" data-position="left" data-theme="a" data-display="push" class="navbar">
         <ul data-role="listview">
@@ -60,8 +60,46 @@
 
     <!-- main content -->
     <div data-role="content" role="main" class="main-content">
-        <p>help page</p>
-
+        <p>
+            Requesting for more information? Interested with our insurance packages? You can get in touch with the nearest Esurance branch and our agents will be delighted to satisfy your queries.
+        </p>
+        <div data-role="collapsible-set" data-theme="b" data-content-theme="b">
+            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross" data-collapsed="false">
+                <h3>Port Louis</h3>
+                <p>12 Barracks Street, Port Louis</p>
+                <p>Tel: 214 5858</p>
+                <p>Email: plouis@esurance.com</p>
+            </div>
+            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
+                <h3>Triolet</h3>
+                <p>Royal Road - 8th Mile</p>
+                <p>Tel: 214 5858</p>
+                <p>Email: triolet@esurance.com</p>
+            </div>
+            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
+                <h3>Rose Hill</h3>
+                <p>9 Sir Virgil Naz Street, Rose Hill</p>
+                <p>Tel: 214 5858</p>
+                <p>Email: rhill@esurance.com</p>
+            </div>
+            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
+                <h3>Flacq</h3>
+                <p>Royal Road, Flacq</p>
+                <p>Tel: 214 5858</p>
+                <p>Email: flacq@esurance.com</p>
+            </div>
+            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
+                <h3>Curepipe</h3>
+                <p>16 Leclezio Street</p>
+                <p>Tel: 214 5858</p>
+                <p>Email: curepipe@esurance.com</p>
+            </div>
+            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
+                <h3>Vacoas</h3>
+                <p>Royal Road, Vacoas</p>
+                <p>Tel: 214 5858</p>
+                <p>Email: vacoas@esurance.com</p>
+            </div>
         </div>
     </div><!-- end main content -->
 </div><!-- end page locate us -->
