--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
                     <li><a name="about-page" href="about.html">About us</a></li>
                     <li><a name="locate-page" href="locate.html">Locate us</a></li>
                     <li><a name="help-page" href="help.html" data-icon="false">Help</a></li>
-                    <li><a name="Setting-page" href="setting.html"></a></li>
+                    <li><a name="Setting-page" href="setting.html">Setting</a></li>
                 </ul>
             </div>
 
@@ -60,8 +60,13 @@
 
             <!-- main content -->
             <div data-role="content" role="main" class="main-content">
-
-                <p>index</p>
+                <div class="homepage">
+                    <img src="img/logo.png" alt="homepage-logo"/>
+                    <p>Welcome to Esurance. <br> Enter to simulate your insurance premium.</p>
+                    <div class="start-button">
+                        <a href="calculator.html" data-theme="d" class="ui-btn ui-btn-d ui-shadow ui-corner-all">Start</a>
+                    </div>
+                </div>
             </div><!-- end main content -->
         </div><!-- end page locate us -->
     </body>
