--- a/www/setting.html
+++ b/www/setting.html
@@ -47,7 +47,7 @@
             <li><a name="about-page" href="about.html">About us</a></li>
             <li><a name="locate-page" href="locate.html">Locate us</a></li>
             <li><a name="help-page" href="help.html" data-icon="false">Help</a></li>
-            <li><a name="Setting-page" href="setting.html"></a></li>
+            <li><a name="Setting-page" href="setting.html">Setting</a></li>
         </ul>
     </div>
 
