--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
         <title>My Insurance</title>
     </head>
     <body>
-        <!-- Locate Us Page -->
+        <!-- Homepage Page -->
         <div data-role="page" data-theme="a" id="homepage">
             <!-- left menu -->
             <div data-role="panel" id="panel" data-position="left" data-theme="a" data-display="push" class="navbar">
@@ -62,12 +62,12 @@
             <div data-role="content" role="main" class="main-content">
                 <div class="homepage">
                     <img src="img/logo.png" alt="homepage-logo"/>
-                    <p>Welcome to Esurance. <br> Enter to simulate your insurance premium.</p>
+                    <p>Welcome to Esurance. <br> Simulate your insurance premium now.</p>
                     <div class="start-button">
                         <a href="calculator.html" data-theme="d" class="ui-btn ui-btn-d ui-shadow ui-corner-all">Start</a>
                     </div>
                 </div>
             </div><!-- end main content -->
-        </div><!-- end page locate us -->
+        </div><!-- end homepage -->
     </body>
 </html>
