--- a/www/locate.html
+++ b/www/locate.html
@@ -20,88 +20,88 @@
     under the License.
 -->
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="format-detection" content="telephone=no" />
-    <meta name="msapplication-tap-highlight" content="no" />
-    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-    <!-- Stylesheet -->
-    <!--<link rel="stylesheet" href="css/jquery.mobile-1.4.5.css">-->
-    <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flatui.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
-    <!-- Javascript -->
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.mobile-1.4.5.js"></script>
-    <title>My Insurance</title>
-</head>
-<body>
-<!-- Locate Us Page -->
-<div data-role="page" data-theme="a" id="locate-us">
-    <!-- left menu -->
-    <div data-role="panel" id="panel" data-position="left" data-theme="a" data-display="push" class="navbar">
-        <ul data-role="listview">
-            <li><a name="calculator-page" href="calculator.html" data-icon="false">Calculator</a></li>
-            <li><a name="about-page" href="about.html">About us</a></li>
-            <li><a name="locate-page" href="locate.html">Locate us</a></li>
-            <li><a name="help-page" href="help.html" data-icon="false">Help</a></li>
-            <li><a name="Setting-page" href="setting.html">Setting</a></li>
-        </ul>
-    </div>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="format-detection" content="telephone=no" />
+        <meta name="msapplication-tap-highlight" content="no" />
+        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <!-- Stylesheet -->
+        <!--<link rel="stylesheet" href="css/jquery.mobile-1.4.5.css">-->
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flatui.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <!-- Javascript -->
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/jquery.mobile-1.4.5.js"></script>
+        <title>My Insurance</title>
+    </head>
+    <body>
+        <!-- Locate Us Page -->
+        <div data-role="page" data-theme="a" id="locate-us">
+            <!-- left menu -->
+            <div data-role="panel" id="panel" data-position="left" data-theme="a" data-display="push" class="navbar">
+                <ul data-role="listview">
+                    <li><a name="calculator-page" href="calculator.html" data-icon="false">Calculator</a></li>
+                    <li><a name="about-page" href="about.html">About us</a></li>
+                    <li><a name="locate-page" href="locate.html">Locate us</a></li>
+                    <li><a name="help-page" href="help.html" data-icon="false">Help</a></li>
+                    <li><a name="Setting-page" href="setting.html">Setting</a></li>
+                </ul>
+            </div>
 
-    <!-- action bar -->
-    <div data-role="header">
-        <a data-iconpos="notext" href="#panel" data-role="button" data-icon="flat-menu"></a>
-        <h1>Esurance</h1>
-        <a href="setting.html" data-iconpos="notext" data-role="button" data-icon="gear" title="Setting">Setting</a>
-    </div>
+            <!-- action bar -->
+            <div data-role="header">
+                <a data-iconpos="notext" href="#panel" data-role="button" data-icon="flat-menu"></a>
+                <h1>Esurance</h1>
+                <a href="setting.html" data-iconpos="notext" data-role="button" data-icon="gear" title="Setting">Setting</a>
+            </div>
 
-    <!-- main content -->
-    <div data-role="content" role="main" class="main-content">
-        <p>
-            Requesting for more information? Interested with our insurance packages? You can get in touch with the nearest Esurance branch and our agents will be delighted to satisfy your queries.
-        </p>
-        <div data-role="collapsible-set" data-theme="b" data-content-theme="b">
-            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross" data-collapsed="false">
-                <h3>Port Louis</h3>
-                <p>12 Barracks Street, Port Louis</p>
-                <p>Tel: 214 5858</p>
-                <p>Email: plouis@esurance.com</p>
-            </div>
-            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
-                <h3>Triolet</h3>
-                <p>Royal Road - 8th Mile</p>
-                <p>Tel: 214 5858</p>
-                <p>Email: triolet@esurance.com</p>
-            </div>
-            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
-                <h3>Rose Hill</h3>
-                <p>9 Sir Virgil Naz Street, Rose Hill</p>
-                <p>Tel: 214 5858</p>
-                <p>Email: rhill@esurance.com</p>
-            </div>
-            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
-                <h3>Flacq</h3>
-                <p>Royal Road, Flacq</p>
-                <p>Tel: 214 5858</p>
-                <p>Email: flacq@esurance.com</p>
-            </div>
-            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
-                <h3>Curepipe</h3>
-                <p>16 Leclezio Street</p>
-                <p>Tel: 214 5858</p>
-                <p>Email: curepipe@esurance.com</p>
-            </div>
-            <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
-                <h3>Vacoas</h3>
-                <p>Royal Road, Vacoas</p>
-                <p>Tel: 214 5858</p>
-                <p>Email: vacoas@esurance.com</p>
-            </div>
-        </div>
-    </div><!-- end main content -->
-</div><!-- end page locate us -->
-</body>
+            <!-- main content -->
+            <div data-role="content" role="main" class="main-content">
+                <p>
+                    Requesting for more information?  Interested with our insurance packages?  Get in touch with the nearest Esurance branch and our agents will be delighted to satisfy your queries.
+                </p>
+                <div data-role="collapsible-set" data-theme="b" data-content-theme="b">
+                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross" data-collapsed="false">
+                        <h3>Port Louis</h3>
+                        <p>12 Barracks Street, Port Louis</p>
+                        <p>Tel: 214 5858</p>
+                        <p>Email: plouis@esurance.com</p>
+                    </div>
+                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
+                        <h3>Triolet</h3>
+                        <p>Royal Road - 8th Mile</p>
+                        <p>Tel: 214 5858</p>
+                        <p>Email: triolet@esurance.com</p>
+                    </div>
+                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
+                        <h3>Rose Hill</h3>
+                        <p>9 Sir Virgil Naz Street, Rose Hill</p>
+                        <p>Tel: 214 5858</p>
+                        <p>Email: rhill@esurance.com</p>
+                    </div>
+                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
+                        <h3>Flacq</h3>
+                        <p>Royal Road, Flacq</p>
+                        <p>Tel: 214 5858</p>
+                        <p>Email: flacq@esurance.com</p>
+                    </div>
+                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
+                        <h3>Curepipe</h3>
+                        <p>16 Leclezio Street</p>
+                        <p>Tel: 214 5858</p>
+                        <p>Email: curepipe@esurance.com</p>
+                    </div>
+                    <div data-role="collapsible" data-collapsed-icon="flat-location" data-expanded-icon="flat-cross">
+                        <h3>Vacoas</h3>
+                        <p>Royal Road, Vacoas</p>
+                        <p>Tel: 214 5858</p>
+                        <p>Email: vacoas@esurance.com</p>
+                    </div>
+                </div>
+            </div><!-- end main content -->
+        </div><!-- end page locate us -->
+    </body>
 </html>
