Added calculate step2

--- a/www/calculator.html
+++ b/www/calculator.html
@@ -89,7 +89,7 @@
                     <input type="number" name="calculator-year-registered" id="calculator-year-registered" value="">
 
                     <div class="next-button">
-                        <a href="calculator.html" data-theme="d" data-icon="arrow-r" data-iconpos="right"  class="ui-btn ui-btn-d ui-shadow ui-corner-all">Next</a>
+                        <a href="#calculator-2" data-theme="d" data-icon="arrow-r" data-iconpos="right"  class="ui-btn ui-btn-d ui-shadow ui-corner-all">Next</a>
                     </div>
                 </form>
             </div><!-- end main content -->
@@ -117,7 +117,18 @@
 
             <!-- main content -->
             <div data-role="content" role="main" class="main-content">
-
+                <form action="" method="POST" class="calculate-form">
+                    <fieldset data-role="controlgroup">
+                        <legend>Additional options:</legend>
+                        <input type="checkbox" name="checkbox-1" id="checkbox-1">
+                        <input type="checkbox" name="checkbox-2" id="checkbox-2">
+                        <input type="checkbox" name="checkbox-3" id="checkbox-3">
+                        <input type="checkbox" name="checkbox-4" id="checkbox-4">
+                    </fieldset>
+                    <div class="next-button">
+                        <a href="#calculator-3" data-theme="d" data-icon="arrow-r" data-iconpos="right"  class="ui-btn ui-btn-d ui-shadow ui-corner-all">Calculate</a>
+                    </div>
+                </form>
             </div><!-- end main content -->
         </div><!-- end page calculator 2 -->
 
