Calulator page styling

--- a/www/calculator.html
+++ b/www/calculator.html
@@ -31,7 +31,7 @@
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flatui.min.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <!-- Javascript -->
-        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="jcordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/jquery.mobile-1.4.5.js"></script>
@@ -89,7 +89,7 @@
                     <input type="number" name="calculator-year-registered" id="calculator-year-registered" value="">
 
                     <div class="next-button">
-                        <a href="#calculator2" data-theme="d" class="ui-btn ui-btn-d ui-shadow ui-corner-all">Next</a>
+                        <a href="#calculator2" data-ajax="false" data-theme="d" class="ui-btn ui-btn-d ui-shadow ui-corner-all">Next</a>
                     </div>
                 </form>
             </div><!-- end main content -->
