Navigation menu bug fixed

--- a/www/calculator.html
+++ b/www/calculator.html
@@ -110,7 +110,7 @@
 
             <!-- action bar -->
             <div data-role="header">
-                <a data-iconpos="notext" href="#panel" data-role="button" data-icon="flat-menu"></a>
+                <a data-iconpos="notext" href="#panel2" data-role="button" data-icon="flat-menu"></a>
                 <h1>Esurance</h1>
                 <a href="setting.html" data-iconpos="notext" data-role="button" data-icon="gear" title="Setting">Setting</a>
             </div>
@@ -139,7 +139,7 @@
         <!-- Calculator 3 Page -->
         <div data-role="page" data-theme="a" id="calculator3" class="calculate">
             <!-- left menu -->
-            <div data-role="panel" id="pane3" data-position="left" data-theme="a" data-display="push" class="navbar">
+            <div data-role="panel" id="panel3" data-position="left" data-theme="a" data-display="push" class="navbar">
                 <ul data-role="listview">
                     <li><a name="calculator-page3" href="calculator.html" data-icon="false">Calculator</a></li>
                     <li><a name="about-page3" href="about.html">About us</a></li>
@@ -151,7 +151,7 @@
 
             <!-- action bar -->
             <div data-role="header">
-                <a data-iconpos="notext" href="#panel" data-role="button" data-icon="flat-menu"></a>
+                <a data-iconpos="notext" href="#panel3" data-role="button" data-icon="flat-menu"></a>
                 <h1>Esurance</h1>
                 <a href="setting.html" data-iconpos="notext" data-role="button" data-icon="gear" title="Setting">Setting</a>
             </div>
